--- a/lib/webapp/templates/base.html
+++ b/lib/webapp/templates/base.html
@@ -8,7 +8,19 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>Student grades</title>
+    <title>Scoreboard</title>
+    <style>
+        body {
+            background-image: url('https://media1.giphy.com/media/r5SF9B74K3JUTskkHD/giphy.gif');
+            background-size: cover;
+    
+    
+    
+            height: 100vh;
+            padding:0;
+            margin:0;
+        }
+    </style>
   </head>
   <body><div class="container">
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
